DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/Opportunity_Application_Form__c.object-meta.xml
<CustomObject>
    <label>Opportunity Application Form</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Application Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>