DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/fields/FORMULA_Customer__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Customer__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>