DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/fields/FORMULA_Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Customer_Address__c</fullName>
    <formula>Opportunity__r.Account.BillingStreet +&apos;, &apos;+ Opportunity__r.Account.BillingCity +&apos;, &apos;+  Opportunity__r.Account.BillingState +&apos;, &apos;+  Opportunity__r.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Address</label>
    <type>Text</type>
</CustomField>