DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/fields/FORMULA_Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Customer_Phone__c</fullName>
    <formula>Opportunity__r.Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Phone</label>
    <type>Text</type>
</CustomField>