DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/fields/FORMULA_Customer_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Customer_Trading_Name__c</fullName>
    <formula>Opportunity__r.Account.Trading_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Trading Name</label>
    <type>Text</type>
</CustomField>