DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/fields/FORMULA_Dealer_Email__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Dealer_Email__c</fullName>
    <formula>Dealer__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Email</label>
    <type>Text</type>
</CustomField>