DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/fields/FORMULA_Opportunity_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Opportunity_Contact_Fax__c</fullName>
    <formula>Opportunity__r.FORMULA_Contact_Fax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Contact Fax</label>
    <type>Text</type>
</CustomField>