DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/fields/FORMULA_Opportunity_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Opportunity_Contact_Phone__c</fullName>
    <formula>Opportunity__r.FORMULA_Contact_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Contact Phone</label>
    <type>Text</type>
</CustomField>