DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/fields/Full_Retail_Price_of_Tablet__c.field-meta.xml
<CustomField>
    <fullName>Full_Retail_Price_of_Tablet__c</fullName>
    <label>Full Retail Price of Tablet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>