DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>