DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/recordTypes/BlackBerry_2_Year_Agreement.recordType-meta.xml
<RecordType>
    <fullName>BlackBerry_2_Year_Agreement</fullName>
    <active>true</active>
    <description>BlackBerry 2 Year Agreement</description>
    <label>BlackBerry 2 Year Agreement</label>
</RecordType>