DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/recordTypes/Tablet_Service_Agreemnet.recordType-meta.xml
<RecordType>
    <fullName>Tablet_Service_Agreemnet</fullName>
    <active>true</active>
    <description>Tablet Service Agreement</description>
    <label>Tablet Service Agreemnet</label>
</RecordType>