DigicielFull/force-app/main/default/objects/Opportunity_Application_Form__c/recordTypes/Tablet_Terms_and_Conditionss.recordType-meta.xml
<RecordType>
    <fullName>Tablet_Terms_and_Conditionss</fullName>
    <active>true</active>
    <description>Tablet Terms and Conditions</description>
    <label>Tablet Terms &amp; Conditions</label>
</RecordType>